--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Marco Zero</title>
 </head>
 <body>
   <header>
@@ -44,6 +44,13 @@
         <img src="./assets/images/boemia.jpeg" alt="boemia no marco zero" width="250" height="200"/>
     </section>
   </main>
+
+  <aside><h3>Confira também outros pontos turísticos de Recife</h3>
+    <ul>
+      <li><a href="/pacoDoFrevo.html">Praça do Frevo</a></li>
+      <li><a href="/brennand.html">Instituto Ricardo Brennand</a></li>
+    </ul>
+  </aside>
   <br/> <br/>
   <footer>
     <p>&copy; 2024 Marco Zero Recife. Todos os direitos reservados.</p>
